# dawn_cmake_test

./: .gitmodules  CMakeLists.txt  README.md  build_desktop.bat  build_web.bat
src/: Renderer.cpp  Renderer.hpp  main.cpp  utils.cpp  utils.hpp
src/shaders/: fragment.wgsl  vertex.wgsl
test/math/: main.cpp  vecf.cpp  vecf.hpp
web/: index.html
web/assets/css/: main.css
web/assets/js/: main.js
